# user_mgmt_system

./: .gitignore  CMakeLists.txt  README.md
include/app/: CommandRegistry.h  TaskFileLoader.h  TaskManager.h  TasksParser.h
include/commandresult/: OutputPrinter.h
include/commands/: AddUserToGroupCommand.h  CreateUserCommand.h  DelateUserCommand.h  DisableUserCommand.h  ExitCommand.h  GetGroupsCommand.h  GetMessageHistoryCommand.h  GetUsersCommand.h  ICommand.h  PingCommand.h  RemoveUserFromGroupCommand.h  SendMessageCommand.h
include/datastore/: IStore.h
include/domain/: Group.h  Message.h  SystemState.h  User.h
include/errorhandling/: ErrorHandler.h
include/errorhandling/exceptions/: AllExceptions.h  BaseException.h  CommandExecutionException.h  InvalidArgumentException.h  InvalidCommandException.h  UserAlreadyExistsException.h  UserNotFoundException.h
include/parsec/: parsec.hpp
include/repositories/: IRepository.h  RepositooryBase.h
include/utils/: CommandStrings.h  Symbols.h  Types.h
src/: CMakeLists.txt  logger.cpp  main.cpp
src/app/: CommandRegistry.cpp  TaskManager.cpp  TaskfilesLoader.cpp  TasksParser.cpp
src/commandresult/: OutputPrinter.cpp
src/commands/: AddUserToGroupCommand.cpp  CreateUserCommand.cpp  DelateUserCommand.cpp  DisableUserCommand.cpp  ExitCommand.cpp  GetGroupsCommand.cpp  GetMessageHistoryCommand.cpp  GetUsersCommand.cpp  PingCommand.cpp  RemoveUserFromGroupCommand.cpp  SendMessageCommand.cpp
src/domain/: Group.cpp  Message.cpp  SystemState.cpp  User.cpp
src/errorhandling/: ErrorHandler.cpp
src/errorhandling/exceptions/: BaseException.cpp  CommandExecutionException.cpp  (+4 more)
tasks/: Task1.txt  Task2.txt  Task3.txt  Task4.txt  Task5.txt
tests/: CMakeLists.txt  MainTest.cpp
tests/commands/: CommandsTest.cpp
tests/parse/: ParseTest.cpp
